# ai-based-data-engineering

./: .env  .gitignore  README.md  dbt_project.yml  file_export.yml  packages.yml  profiles.yml  pyproject.toml  pyproject_bkp.toml
.github/workflows/: batch_export_tests.yml  dbt_compile.yml
batch_export_tests/: batch_export_test.py  conftest.py  metadata_models.py  metadata_tests.py
frontend/: README.md  index.html
frontend/src/: index.css
frontend/src/components/: PRPreview.tsx
frontend/src/pages/: Index.tsx
models/: d_customers.sql  d_customers.yml  file_export.yml  minbutik_checkout_frequency__f_store_sale.yml  minbutik_checkout_frequency__f_store_sale_v4.sql  minbutik_checkout_frequency__f_store_sale_v5.sql  schema.yml  sources.yml
src/ai_dbt_bot/: dbt_modifier.py  gh_api_handler.py  git_handler.py  llm_engine.py  main.py  pr_handler.py  pr_ready.py  system_message.txt  translator_service.py
templates/: file_export.yml
tests/: test_dbt_modifier.py  test_llm_engine.py
